plugins {
  id 'java-library'
  id 'idea'
  id 'maven-publish'
  id 'net.neoforged.moddev' version '2.0.105'
  id "es.degrassi.unified-publishing-with-mmr-bot" version "1+"
  id "io.freefair.lombok" version "8.6"
}

tasks.named('wrapper', Wrapper).configure {
  distributionType = Wrapper.DistributionType.BIN
}

base {
  archivesName = archives_base_name
  version = "${minecraft_version}-${mod_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
java.withSourcesJar()

/*File transformer = rootProject.file("src/main/resources/META-INF/accesstransformer.cfg")

if (transformer.exists()) {
  minecraft.accessTransformers.file transformer
}*/

neoForge {
  version = project.neo_version

  parchment {
    mappingsVersion = project.parchment_mappings_version
    minecraftVersion = project.parchment_minecraft_version
  }

  runs {
    client {
      client()
      systemProperty "neoforge.enabledGameTestNamespaces", project.mod_id
    }
    server {
      server()
      programArgument "--nogui"
      systemProperty "neoforge.enabledGameTestNamespaces", project.mod_id
    }
    gameTestServer {
      type = "gameTestServer"
      systemProperty "neoforge.enabledGameTestNamespaces", project.mod_id
    }
    data {
      data()
      programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
    configureEach {
      systemProperty 'forge.logging.markers', 'REGISTRIES'
      logLevel = org.slf4j.event.Level.DEBUG
    }
  }

  mods {
    "${mod_id}" {
      sourceSet(sourceSets.main)
    }
  }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
  runtimeClasspath.extendsFrom localRuntime
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url = "https://repo.spongepowered.org/repository/maven-public/"
  }
  maven {
    name = "Forge"
    url = "https://maven.minecraftforge.net"
  }
  maven {
    name = "Jared's maven"
    url = "https://maven.blamejared.com/"
    content {
      includeGroup "mezz.jei"
      includeGroup "com.hollingsworth.ars_nouveau"
      includeGroup "com.hollingsworth.nuggets"
      includeGroup "vazkii.patchouli"
      includeGroup "com.almostreliable.mods"
    }
  }
  maven {
    name = "Shedaniel's maven"
    url = "https://maven.shedaniel.me/"
    content {
      includeGroup "me.shedaniel.cloth"
    }
  }
  maven {
    name = "Illusive Soulworks maven"
    url = "https://maven.theillusivec4.top/"
  }
  maven {
    url "https://maven.latvian.dev/releases"
    content {
      includeGroup "dev.latvian.mods"
      includeGroup "dev.latvian.apps"
    }
  }
  maven {
    url 'https://jitpack.io'
    content {
      includeGroup "com.github.rtyley"
    }
  }
  maven {
    url = "https://maven.architectury.dev"
    content {
      includeGroup "dev.architectury"
    }
  }
  maven {
    name = "Mod maven"
    url = "https://modmaven.dev/"
    content {
      includeGroup "mcjty.theoneprobe"
      includeGroup "mekanism"
    }
  }
  maven {
    url "https://www.cursemaven.com"
    content {
      includeGroup "curse.maven"
    }
  }
  maven {
    name = "OctoStudios"
    url = uri("https://maven.octo-studios.com/releases")
  }
  maven { // TOP
    url "https://maven.k-4u.nl"
    content {
      includeGroup "mcjty.theoneprobe"
    }
  }
  maven {
    name = 'GeckoLib'
    url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
    content {
      includeGroup("software.bernie.geckolib")
    }
  }
  maven {
    name = "Covers"
    // for rf stuffs
    url = "https://maven.covers1624.net"
  }
  maven {
    name = "TerraformersMC"
    url = "https://maven.terraformersmc.com/"
    content {
      includeGroup "dev.emi"
    }
  }
  maven {
    name = "AlecRepository"
    url = 'https://maven.degrassi.es/releases'
    content {
      includeGroup "es.degrassi"
    }
  }
}

dependencies {
  // lombok
  compileOnly "org.projectlombok:lombok:${project.lombok_version}"
  annotationProcessor "org.projectlombok:lombok:${project.lombok_version}"
  implementation "net.neoforged:neoforge:${neo_version}"
  compileOnly localRuntime ("es.degrassi:experiencelib:${minecraft_version}-${experiencelib_version}")

  // ProbeJS
  localRuntime("curse.maven:probejs-585406:7105159")

  // JEI
  compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
  compileOnly localRuntime("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")

  // EMI
  compileOnly("dev.emi:emi-neoforge:${emi_version}+${minecraft_version}:api")
  compileOnly localRuntime("dev.emi:emi-neoforge:${emi_version}+${minecraft_version}")

  // KubeJS
  compileOnly localRuntime("dev.latvian.mods:kubejs-neoforge:$kubejs_version")

  // Jade
  compileOnly localRuntime("curse.maven:jade-324717:${jade_version}")

  // The one probe
  localRuntime compileOnly("mcjty.theoneprobe:theoneprobe:${top_version}") {transitive = false}

  // Mekanism
  compileOnly localRuntime("mekanism:Mekanism:${mekanism_version}")

  // Almost unified
  compileOnly localRuntime("com.almostreliable.mods:almostunified-neoforge:${almostunified_version}")

  // Addons for testing
//  localRuntime("es.degrassi:modular_machinery_reborn_energistics:${minecraft_version}-2.0.0")
  localRuntime("es.degrassi:modular_machinery_reborn_ars:${minecraft_version}-2.0.3")
  localRuntime("es.degrassi:modular_machinery_reborn_mekanism:${minecraft_version}-2.0.6")
  localRuntime("org.appliedenergistics:appliedenergistics2:19.2.10")
  localRuntime("es.degrassi:applied-experienced:${minecraft_version}-1.2.0")
  localRuntime("curse.maven:applied-mekanistics-574300:5978711")
  localRuntime("curse.maven:ars-energistique-905641:5978726")
  localRuntime("software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:4.7.5.1")
  localRuntime("vazkii.patchouli:Patchouli:1.21-88-NEOFORGE-SNAPSHOT")
  localRuntime("top.theillusivec4.curios:curios-neoforge:9.4.2+1.21.1")
  localRuntime("com.hollingsworth.ars_nouveau:ars_nouveau-${project.minecraft_version}:5.8.2.1100")

  // ProjectE due to a report
  // localRuntime("curse.maven:projecte-226410:6611984")

  // experience fluids
  localRuntime("curse.maven:mob-grinding-utils-254241:${project.MGU}")
  localRuntime("curse.maven:titanium-287342:${titanium}")
  localRuntime("curse.maven:industrial-foregoing-266515:${project.IF}")

  // Observable profiling
  localRuntime "curse.maven:architectury-api-419699:5786327"
  localRuntime "curse.maven:kotlin-for-forge-351264:5978393"
  localRuntime("curse.maven:observable-509575:5733591")
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
  var replaceProperties = [
      minecraft_version      : minecraft_version,
      minecraft_version_range: minecraft_version_range,
      neo_version            : neo_version,
      neo_version_range      : neo_version_range,
      loader_version_range   : loader_version_range,
      mod_id                 : mod_id,
      mod_name               : mod_name,
      mod_license            : mod_license,
      mod_version            : mod_version,
      mod_authors            : mod_authors,
      mod_description        : mod_description,
      mod_url                : mod_url,
      icon                   : icon,
      experiencelib_version  : experiencelib_version,
      pack_format_number     : pack_format_number,
      top_version            : top_version,
      emi_version            : emi_version,
      kubejs_version         : kubejs_version,
      jei_version            : jei_version,
      almostunified_version  : almostunified_version
  ]
  inputs.properties replaceProperties
  expand replaceProperties
  from "src/main/templates"
  into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
  publications {
    register('mavenJava', MavenPublication) {
      groupId = maven_group
      artifactId = archivesBaseName
      version = project.version
      from components.java

      pom {
        name = mod_name
        description = mod_description
        packaging = 'jar'
        scm {
          url = mod_github
        }
        issueManagement {
          system = 'github'
          url = mod_issues
        }
        licenses {
          license {
            name = mod_license
            distribution = 'repo'
          }
        }
        developers {
          developer {
            id = mod_authors
            name = mod_authors
            roles = ['developper']
          }
        }
      }
    }
  }
  repositories {
    maven {
      name = 'maven'
      url = 'https://maven.degrassi.es/releases'
      credentials {
        username = "Alec_016GG"
        password = System.getenv("MAVEN_PASSWORD")
      }
    }
  }
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
  module {
    downloadSources = true
    downloadJavadoc = true
  }
}

unifiedPublishingWithMMRBot {
  project {
    displayName = "[NeoForge]ModularMachineyReborn-${minecraft_version}-${mod_version}"
    releaseType = "release"
    if (rootProject.file("CHANGELOG.md").exists()) {
      changelog = rootProject.file("CHANGELOG.md").text
    }
    gameVersions = ["${minecraft_version}", "1.21"]
    gameLoaders = ["neoforge"]
    mainPublication jar
    modid = mod_id
    modVersion = "ModularMachineyReborn-${minecraft_version}-${mod_version}"

    var CURSE_API_KEY = System.getenv("CURSEFORGE")
    if (CURSE_API_KEY != null) {
      curseforge {
        token = CURSE_API_KEY
        id = "1083840"
        relations {
          depends "experiencelib"
          optional "kubejs"
          optional "jei"
          optional "emi"
          optional "jade"
          optional "the-one-probe"
          optional "almost-unified"
        }
      }
    }

    var MODRINTH_API_KEY = System.getenv("MODRINTH")
    if (MODRINTH_API_KEY != null) {
      modrinth {
        token = MODRINTH_API_KEY
        id = "oPdlqv8D"
        relations {
          depends "experiencelib"
          optional "kubejs"
          optional "jei"
          optional "emi"
          optional "jade"
          optional "the-one-probe"
          optional "almost-unified"
        }
      }
    }
  }
}
